--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "date-fns": "^4.1.0",
     "docx": "^9.5.1",
     "exceljs": "^4.4.0",
+    "file-saver": "^2.0.5",
     "html2canvas": "^1.4.1",
     "jspdf": "^3.0.3",
     "jspdf-autotable": "^5.0.2",
