--- a/package.json
+++ b/package.json
@@ -54,11 +54,14 @@
     "next-themes": "^0.4.6",
     "pdf-lib": "^1.17.1",
     "pdf-parse": "^2.4.5",
+    "plotly.js": "^3.3.1",
     "react": "^19.2.0",
     "react-day-picker": "^9.13.0",
     "react-dom": "^19.2.0",
     "react-hook-form": "^7.70.0",
     "react-hot-toast": "^2.6.0",
+    "react-plotly.js": "^2.6.0",
+    "react-resizable-panels": "^4.5.5",
     "recharts": "^3.5.1",
     "sonner": "^2.0.7",
     "tailwind-merge": "^3.3.1",
